--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
+*, *::before, *::after {
+  box-sizing: border-box;
+ }
+  
+ img,svg,video,canvas,audio,iframe,embed,object {
+  display: block;
+  max-width: 100%;
+ }
+  
+ input, button, textarea, select {
+  font: inherit;
+ }
+  
+ *{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font: inherit;
+ }
+
+ .search-bar {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 40px;
+  border-radius: 10px;
+  border: 2px;
+  overflow: hidden;
+  background-color: #f0f0f0;
+  
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.search-bar input[type="text"] {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 16px;
+  
+}
+.selectedFile {
+  background-color: #b6e8f4 !important;
+}
+.search-result {
+  cursor: pointer;
+  padding: 3px;
+  margin-bottom: 4px;
+}
+
+.search-result.selected {
+ background-color: rgb(199, 245, 125);
+ border-radius: 4px;
+  
+}
+.App-link {
+  color: #42c150;
+}
+
+
+.rounded-button:hover {
+  background-color: #76e9ef;
+  border-radius: none;
+  
 }
